# innate-way

./: .gitignore  .gitmodules  .local-workflow.state.json  AGENTS.md  BUILD.md  BUILD_SYSTEM_SUMMARY.md  DUAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  Taskfile.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py
.kimi/skills/conversation-recorder/: SKILL.md  config.yaml
capture/: pytest.ini
capture-tui-go/: go.mod  go.sum
capture-tui-go/cmd/capture/: main.go
capture-tui-go/features/: add.feature  analyze.feature  categories.feature  export.feature  init.feature  session.feature
capture-tui-go/internal/config/: config.go
capture-tui-go/internal/models/: category.go  entry.go  session.go
capture-tui-go/internal/parser/: extractors.go
capture-tui-go/internal/storage/: file_store.go
capture-tui-go/specs/: api-spec.md
capture-tui-go/test/: category_test.go  entry_test.go  parser_test.go
capture/capture_tui/: __init__.py  cli_typer.py
capture/capture_tui/ai/: analyzer.py  summarizer.py
capture/capture_tui/cli/: __init__.py
capture/capture_tui/core/: client.py
capture/capture_tui/exporters/: json_exporter.py  markdown_exporter.py
capture/capture_tui/models/: __init__.py  entry.py
capture/capture_tui/parser/: __init__.py
capture/capture_tui/pipeline/: __init__.py  batch.py  engine.py  errors.py  queue.py  stages.py
capture/capture_tui/session/: __init__.py
capture/capture_tui/storage/: __init__.py  entry_store.py  file_store.py
capture/capture_tui/tutorial/: __init__.py  generator.py  skill_bridge.py
capture/tests/integration/: test_workflow.py
capture/tests/unit/: test_core.py  test_exporters.py  test_pipeline.py  test_session.py  test_storage.py  test_tutorial_models.py
capture_tui/: cli_typer.py  config.py
capture_tui/ai/: __init__.py  task_extractor.py
capture_tui/cli/: main.py
capture_tui/core/: __init__.py  category_manager.py
capture_tui/exporters/: __init__.py  csv_exporter.py  feishu_exporter.py
capture_tui/models/: category.py  session.py
capture_tui/parser/: extractors.py  input_parser.py
capture_tui/pipeline/: context.py
capture_tui/session/: exporter.py  manager.py  recorder.py
capture_tui/storage/: index_manager.py
capture_tui/tutorial/: models.py
capture_tui/tutorial/stages/: extract_code.py  generate_script.py  parse.py  render.py
capture_tui/tutorial/templates/: __init__.py  base.py  md_only.py  md_script.py  script_only.py
client/: .gitignore  package.json
client/apps/desktop/: package.json  tsconfig.json
client/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
client/apps/desktop/src-tauri/src/: lib.rs
client/apps/web/: package.json
docs/: ROADMAP.md
docs/analysis/: current-state-analysis.md  skill-analysis.md  structure-and-skills-analysis.md
docs/capture-tui/: execution-summary.md
docs/capture-tui/analysis/: requirements-analysis.md
docs/capture-tui/architecture/: tech-architecture.md
docs/capture-tui/tasks/: implementation-tasks.md
innate/: README.md  package.json
innate-desktop-reference/: .gitmodules
innate/.github/workflows/: ci.yml
innate/apps/desktop/: index.html  package.json  tsconfig.json
innate/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
innate/apps/desktop/src-tauri/src/: lib.rs  main.rs
innate/apps/web/: next.config.ts  package.json  tsconfig.json
kimi-ana/: README.md  executable-tutorials.md
scripts/: build-go.bat  build-go.sh  build-python.bat  build-python.sh
spark/: .gitignore  README.md  package.json  turbo.json
spark/apps/desktop/: index.html  package.json  tsconfig.json
spark/apps/web/: next.config.ts  package.json  tsconfig.json
tasks/analysis/: claude-code-hooks-reference.md  skill-workflow-composition.md  spark-skills-hooks-and-workflow-tasks.md
tasks/features/: skills.md
tasks/mindstorm/: ai-coding-education-for-families-analysis.md  conceptual-analysis-ai-agent-era.md  crazy-thoughts.md  current.md  karpathy_wiki_integration_analysis.md  local-research-wiki-rag-analysis.md  overview.md
tasks/tracing/: overview.md
tests/unit/: test_models.py  test_parser.py  test_tutorial_stages.py
(+68 files in other folders)
